# india_internal_migration_mapping

./: .gitignore  IND_5yrs_InternalMigFlows_2010.csv  INSTALL.md  LICENSE  README.md  app.py  india_state_migration_flows_hover.html  pyproject.toml
templates/: index.html
